# ChangeLog for sys-process/glances
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.17 2014/05/26 03:49:24 idella4 Exp $

*glances-1.7.7 (26 May 2014)

  26 May 2014; Ian Delaney <idella4@gentoo.org> +glances-1.7.7.ebuild:
  bump; drop py2.6 pypy due to the 'share' in PyPy prefix issue, add py3.4
  support, add IUSE doc & reset / fix doc install

  16 Apr 2014; Ian Delaney <idella4@gentoo.org> glances-1.7.4.ebuild:
  add pypy support

*glances-1.7.4 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +glances-1.7.4.ebuild:
  Bump

  17 Mar 2014; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Remove myself from metadata.xml

*glances-1.7.3 (17 Dec 2013)

  17 Dec 2013; Patrick Lauer <patrick@gentoo.org> +glances-1.7.3.ebuild:
  Bump

*glances-1.7.2 (16 Nov 2013)

  16 Nov 2013; Kacper Kowalik <xarthisius@gentoo.org> +glances-1.7.2.ebuild,
  -glances-1.7.ebuild:
  Version bump, drop old

*glances-1.7.1 (26 Aug 2013)

  26 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> +glances-1.7.1.ebuild,
  -glances-1.6.1.ebuild, glances-1.7.ebuild:
  Version bump, drop old

*glances-1.7 (12 Aug 2013)

  12 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +glances-1.7.ebuild,
  metadata.xml:
  Version bump

  08 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> glances-1.6.1.ebuild:
  Add ~arm keyword, wrt bug #477832

  07 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> glances-1.6.1.ebuild:
  Keyword amd64-linux and x86-linux

  10 Jul 2013; Kacper Kowalik <xarthisius@gentoo.org> glances-1.6.1.ebuild:
  Add python3.x to PYTHON_COMPAT wrt #475986 by CBke <cb@linux.be>

*glances-1.6.1 (20 May 2013)

  20 May 2013; Kacper Kowalik <xarthisius@gentoo.org> +glances-1.6.1.ebuild,
  -glances-1.6.ebuild:
  Version bump, depend properly on python[ncurses] wrt bug 460068 by Albert W.
  Hopkins <marduk@python.net>, check for required kernel options. Drop old
