@@ -6,17 +6,19 @@ DIST Glances-1.7.2.tar.gz 1222969 SHA256 8901f4b59422f4a0805f2e556550efbf1dcb0be
 DIST Glances-1.7.3.tar.gz 674291 SHA256 ea21991031143c0b36147d2e0e32adb5b9aa0d17b5e1ec68630cbb51cd0a0de4 SHA512 951bb10922754bb5d270dd4ea5e35c412f77d4ddccd8013513a55e0d5a02c2698de047ae3c2fdb9edf2ff70f0c17ae43c6b779110fa9398ac10ec2fc7ae669db WHIRLPOOL c780d654912277da83fcf1039508a92231c078ae11f521f1014cd8c2eaa46bfc1aeae45bca967a6935cf5e62201c16dbc10042f4b533adc3afaa51fabb530038
 DIST Glances-1.7.4.tar.gz 571227 SHA256 72ec290b6bb0410038c4ca9faeb9cfc2414621da45f876c5184bfb11b56e659e SHA512 e598b0d033e834bf2fc07cb58f2259ecbeaba2809f0073d5e0243d4358b38556f72f94607623dd49a567e48a365bf09d921ad3c9f029d1c0a9348bcee445ddf8 WHIRLPOOL 1c8f97c53a2491d030750c8d86013d0fefff0ae89ec8161ea51ad107b21f181a3f8578ab92cb0b6a9dd6b45c12202240fe2a97dac8a36fda5e06630f8e3cf9f2
 DIST Glances-1.7.7.tar.gz 575960 SHA256 cfb7f2520f576595e7c746daec104b2cc5b19c43b3a1faf0662cb75d0f005a53 SHA512 705648c54714318dff0f7a6a8394d04f0a13a178bf1b941922fa5753a6ae95023711990b5cf14b40e0a4060a04c1f90aabe7af89b695b2fe667402593fc11488 WHIRLPOOL aa38e81796b7d945c12384f575e14157268deaeb5dffebbacb1382ec21400039d3a09d106fbc4aac12b5c34b3f71c7077dd21a1a63c9163295179579b02486f0
+DIST Glances-2.0.tar.gz 1673386 SHA256 b573e7ed31e8646c5f588c37eda8f9f186e4c1cfd09074bec20dd991dd638a02 SHA512 2c6e00a42344f2611f5e231a8eac3b97cebb523e3ac037612c08f760d5d974dcc673f81a00e1fdfbd16867c488717ad9545fdc52707ebb1979cd575c484e688d WHIRLPOOL ffa72ad83a72c20ed32d0f04bd6036ccb9d16cee0a9a744400b42faef5499e82e440367e455071c1b5f9435f78db55bcef3de4f0ef239937a0e1de099902080f
 EBUILD glances-1.7.1.ebuild 1287 SHA256 649899cd9f39a16ea8aa2e817db1750110fb2f655b42b12d39522152cfbbb868 SHA512 f02548130ec818911b2ed1645b13eb40cf33db51c28316c7ac2cf0981b4aca904b8e9079d2e39022ba88e36a2c801aa82febff3c29a53b2c0a9d41ca73ddd0ff WHIRLPOOL 177c0e7728610e19161122d722bb319b41663ae6f1379452a928b048fa98a18491731986e6f6e7e0224112fce18513bf5619f79db26677b6f0a6abbbcdd378e5
 EBUILD glances-1.7.2.ebuild 1287 SHA256 d5085960e34b30d2da102a17e230e1358abc326ae6ceb29428c081e03e4ad176 SHA512 0daa1b0346b09f7c040f2f17cd814f5df1c0b788c3e5470ef5f612a272f164e06c6873f156b65a6c92433e19cf2b0eabbd2b2f64924b92307b5c6e5dbdae8e69 WHIRLPOOL 24d39966d828b5b3429893f4ffefe09f568e0bb853978ffcb8b78abb8c1a1e94eef225389a53300f4ae1453c2b54a768a82224a9225da1b18cd8bfa47dd6f1c8
 EBUILD glances-1.7.3.ebuild 1284 SHA256 af657f936d813ecb82e94beae5af155f626b0f21a2557f7d6cc91d627452cc88 SHA512 df8927fd645486129c805b77c03341460c717c822d01c34a22b50448e5713759097d080e9f0a57ec6947c3c5c713f326da303b35eb2a198016dd0949efa9d80c WHIRLPOOL 7cb5ead7ca513aef036a58d1b4bae1fa1ddfb7b8b5da6922c97b662e5f7a6b778bd35653c4ef6295dbb0a08100a26b2d5f39e3524835862dc93b35c3276e096c
 EBUILD glances-1.7.4.ebuild 1289 SHA256 77049752c4be910c45f1a990e0e1e7b2dca9eb6f7b5680d8ea569c84c6bccb40 SHA512 5d27866c997e13ef89845a1f7e68b9bf6b2d35d682840c3e4ab47063180be525b32a14f2877e228085107f8f3c607eebafbdb46e145c379a3b4ebf39e5ba4384 WHIRLPOOL be70dc5539334f27892e7328b378ea502c8a929aea9d51e7ad1d9c4b66eb1c1ee4c578256fd423796f38182e9eeb902c06b652555e87cc667ef04d04b1f405e2
 EBUILD glances-1.7.7.ebuild 1582 SHA256 9d6586c9bc6cf0ba7a147c076e0c95c6c17aedf26beff6542a42f61dd22f79f2 SHA512 497436d5e4836936e7c8980ce0ee00d7b029d5bada04b400194482917d3dd2a50d4d999925dc71fcad05ea26893f9e7f3cfc212dd955abfdd6f78d439e400627 WHIRLPOOL d5117194d2898d1967ec496c733a74779a161c1c46e6ec91fd31fba0fc2bf6df058a6c18f734c6852031cea66797fa05757ed3c2ca3044db0edfa19ae29195ea
-MISC ChangeLog 2934 SHA256 a90edd46ccae8fc6c17744f932db5664d127cf8dd2d52eb5ffc64c8688d9ff72 SHA512 426b4613c427e3761de80b44a37d36faea0e85b9ee7c71b0330f6bd514ba17bb7befa60fb1ba04ee8bf149e84ccdd080b920bbb7e3c0a3397f1dbe010c40d6bf WHIRLPOOL f9379ae98c9714f7efe26262e3dbad6474aca67e85f9c67bea1fdcb76d0607b2b14edebe5928411748251d326b29b0d5364eceb247026ba2a782c16b68477844
-MISC metadata.xml 344 SHA256 59988f336570c2d8925d2b8d70edcd15989e45f41f87a3eee04050a31b9dd1c9 SHA512 5d2b53f29ab80adce5755660be74f198416a17df91796abed180666b05a8caee1dc5a21ba3769f4dfec50bf9fce8e112c96f8cb7eae90fc5caec35abb7e93641 WHIRLPOOL 1a48045e1daf2fee69e731dab9354c7042d5091006c0dd82cf47c29a9eda723e0c29ccdc4030deba3e3804784edc535cd2ea35b948468e003e21bf5fc47767de
+EBUILD glances-2.0.ebuild 1793 SHA256 eea399a0280997d9bd32175e33075b8674cd994e702ac4404f20332b8f2659c8 SHA512 97c2c2682c1bbe508ff3b5bad138d9b39666b7c0e3986c139eaadd4f8d6ea0acc36218376708970e9966fd5b2d436d7b1e92e6ca262c08fa8aeac81a0ead580c WHIRLPOOL 06990f01c07001eaf63b422253c8ffdfa4acd9952e4bfed9749c2aa9356ad24172d81551b465e40f2299986920d135ad77e0cb420a69183b3ce477d830bbc72e
+MISC ChangeLog 3139 SHA256 2aa7b5995741c342d9aa1f80de3410e6ad61d53a9b16e29d276af51a8ba4f92c SHA512 63ebdc99924de5936be5707b1d56a667ae4b365602a08aa112b7ef1d0d5b571c630e38037f37a2aeb8260c343e82d50553e9a729ddb0972d1a6bd689195051d0 WHIRLPOOL 7029a1eba0644f8326908e9fefd8b69b31bd5ab81af20154f4411ff5a9b1d0db76cecf77f7e2bfd92f656fc81b517755efa3b2731acaa0e7a34657f10930df9c
+MISC metadata.xml 533 SHA256 5b63b6a514b6a1a7603a73f046fd36fb2663a583361c43f3ec71670b52e39e50 SHA512 7fdc2c97c84004da74e283f35d2d7e81b25a9fa49b5d46f9055494ce918454c19187ffd5be40631df0c705cdf1dc0f3a57ee28189fb468861d6772efb919350d WHIRLPOOL 62020f135ea66b152f8f755d0ebb3c52c474715864cc5c59bac4cfeec8bb6441985227448507aebd1bb2c6ae8008a56c2247b3963e8921369dd95a55ceb600f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOCt+8ACgkQso7CE7gHKw0bUACgwm1z5urvpWXk8q43KAKnfTP9
-swMAn0uuEnlJYNG8NtEFZaH5thNe/6Pd
-=xuye
+iEYEAREIAAYFAlOiT24ACgkQso7CE7gHKw3KTwCgvzzLE1PIhtj1i4p1PDqo8W6C
+ZSsAoLC26IYsK0OMuQj6FNfqF3sA17fa
+=BTwJ
 -----END PGP SIGNATURE-----
