@@ -3,10 +3,14 @@
 <pkgmetadata>
 <herd>python</herd>
 <longdescription>
-  Glances is a cross-platform curses-based monitoring tool written in
-  Python.
+	Glances is a cross-platform curses-based monitoring tool written in Python.
 </longdescription>
+	<use>
+    		<flag name='web'>Enables the web server mode</flag>
+		<flag name='hddtemp'>Enables hard drive temperature monitoring</flag>
+		<flag name='snmp'>Enables SNMP support</flag>
+	</use>
 <upstream>
-  <remote-id type="pypi">Glances</remote-id>
+	<remote-id type="pypi">Glances</remote-id>
 </upstream>
 </pkgmetadata>
